--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,276 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+:root {
+  --white: #ffffff;
+  --bWhite: #f5f5f5;
+  --textColor: #282828;
+  --blue: #002255;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+ul {
+  list-style: none;
+}
+
+textarea {
+  resize: none;
+  font-family: "Poppins", sans-serif;
+}
+
+/* ------------------------------------------------------- */
+
+/* flex */
+.flex {
+  display: flex;
+}
+
+.alignCenter {
+  align-items: center;
+}
+
+.alignStart {
+  align-items: flex-start;
+}
+
+.alignEnd {
+  align-items: flex-end;
+}
+
+.justifyCenter {
+  justify-content: center;
+}
+
+.justifyStart {
+  justify-content: flex-start;
+}
+
+.justifyEnd {
+  justify-content: flex-end;
+}
+
+.flexColumn {
+  flex-direction: column;
+}
+
+.flexWrap {
+  flex-wrap: wrap;
+}
+
+.spaceBtw {
+  justify-content: space-between;
+}
+
+.spaceEvenly {
+  justify-content: space-evenly;
+}
+
+/* ------------------------------------------------------- */
+
+/* widths */
+
+.maxWidth {
+  max-width: 1450px;
+}
+
+.width100 {
+  width: 100%;
+}
+
+.width95 {
+  width: 95%;
+}
+
+.width90 {
+  width: 90%;
+}
+
+.width85 {
+  width: 85%;
+}
+
+.width80 {
+  width: 80%;
+}
+
+.width75 {
+  width: 75%;
+}
+
+.width70 {
+  width: 70%;
+}
+
+.width65 {
+  width: 65%;
+}
+
+.width60 {
+  width: 60%;
+}
+
+.width55 {
+  width: 55%;
+}
+
+.width50 {
+  width: 50%;
+}
+.width49 {
+  width: 49%;
+}
+.width48 {
+  width: 48%;
+}
+.width45 {
+  width: 45%;
+}
+.width40 {
+  width: 40%;
+}
+
+.width30 {
+  width: 30%;
+}
+
+.width24 {
+  width: 24%;
+}
+
+.width19 {
+  width: 19%;
+}
+
+/* height */
+.height15 {
+  height: 15rem;
+}
+
+/* ------------------------------------------------------- */
+
+/* margins - paddings */
+
+.marginUpDown {
+  margin: 1rem 0;
+}
+
+.marginBottom05 {
+  margin: 0 0 0.5rem 0 !important;
+}
+
+.marginBottom1 {
+  margin: 0 0 1rem 0 !important;
+}
+
+.marginBottom2 {
+  margin: 0 0 2rem 0 !important;
+}
+
+.marginBottom3 {
+  margin: 0 0 3rem 0 !important;
+}
+
+.marginUp1 {
+  margin: 1rem 0 0 0;
+}
+
+.marginUp2 {
+  margin: 2rem 0 0 0;
+}
+
+.margin {
+  margin: 1rem;
+}
+
+.margin-2 {
+  margin: 0 0 -0.2rem 0;
+}
+
+.paddingBottom1 {
+  padding: 0 0 1rem 0;
+}
+
+.paddingBottom2 {
+  padding: 0 0 2rem 0;
+}
+
+.paddingUp1 {
+  padding: 1rem 0 0 0;
+}
+
+.paddingUp2 {
+  padding: 2rem 0 0 0;
+}
+
+.padding {
+  padding: 1rem;
+}
+
+/* ------------------------------------------------------- */
+
+/* border */
+.border {
+  border: 1px solid;
+}
+
+.borderRadius02 {
+  border-radius: 0.2rem;
+}
+
+.borderRadius03 {
+  border-radius: 0.3rem;
+}
+.borderRadius04 {
+  border-radius: 0.4rem;
+}
+.borderRadius05 {
+  border-radius: 0.5rem;
+}
+
+/* ------------------------------------------------------- */
+
+/* fonts */
+.font300 {
+  font-weight: 300;
+}
+.font400 {
+  font-weight: 400;
+}
+.font500 {
+  font-weight: 500;
+}
+.font600 {
+  font-weight: 600;
+}
+.font700 {
+  font-weight: 700;
+}
+
+/* ------------------------------------------------------- */
+
+/* text aligns */
+.textJustify {
+  text-align: justify;
+}
+
+.textCenter {
+  text-align: center;
+}
+
+.textLeft {
+  text-align: left;
+}
+
+.textRight {
+  text-align: right;
 }
