--- a/components/EnquiryForm/style.css
+++ b/components/EnquiryForm/style.css
@@ -19,6 +19,7 @@ form select {
   align-items: center;
   justify-content: center;
   padding: 0 0 0 0.5rem;
+  border-radius: 0.3rem;
 }
 
 .inputsDiv .enqInputIcon {
@@ -34,6 +35,7 @@ form textarea {
   padding: 0.5rem;
   font-size: 1rem;
   border: 1px solid grey;
+  border-radius: 0.3rem;
   outline: none;
 }
 
@@ -45,6 +47,7 @@ form button {
   color: var(--white);
   border: 1px solid var(--blue);
   outline: none;
+  border-radius: 0.3rem;
 }
 
 form button:hover {
