--- a/components/Home/CoursesSection/style.css
+++ b/components/Home/CoursesSection/style.css
@@ -60,6 +60,11 @@
   border-radius: 0.3rem;
   z-index: 999;
   padding: 0.5rem;
+  height: 14rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .courseSection .courseSContainer .coursesTab .courseTBox .coursesTBoxC h4 {
