--- a/components/Navbar/style.css
+++ b/components/Navbar/style.css
@@ -26,3 +26,77 @@ header nav .navContainer .menu ul .navCall a {
 header nav .navContainer .menu ul .navCall a .navCallIcon {
   margin: 0 0 -0.15rem 0;
 }
+
+/* sub menu */
+
+header nav .navContainer .menu ul li .subMenu {
+  padding: 1rem;
+  display: none;
+  position: absolute;
+  /* background-color: #0d3c83; */
+  background-color: var(--blue);
+  color: var(--white);
+  width: 95%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom-left-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
+  height: 8rem;
+  margin: 1rem 0 0 0;
+}
+
+header nav .navContainer .menu ul .coursesMenu {
+  cursor: pointer;
+}
+
+header nav .navContainer .menu ul .coursesMenu .showSubMenu {
+  display: flex;
+}
+
+header nav .navContainer .menu ul li .subMenu li {
+  cursor: pointer;
+  margin: 0.5rem 0 0 0;
+  width: 20%;
+}
+
+header nav .navContainer .menu ul li .subMenu .daMenu {
+  position: absolute;
+  width: 100%;
+}
+
+header nav .navContainer .menu ul li .subMenu .daMenu li {
+  font-size: 0.9rem;
+  margin: 0.2rem 0 0 0;
+}
+
+header nav .navContainer .menu ul li .subMenu .softMenu {
+  position: absolute;
+  width: 100%;
+}
+
+header nav .navContainer .menu ul li .subMenu .softMenu li {
+  font-size: 0.9rem;
+  margin: 0.2rem 0 0 0;
+}
+
+header nav .navContainer .menu ul li .subMenu .msMenu {
+  position: absolute;
+  width: 100%;
+}
+
+header nav .navContainer .menu ul li .subMenu .msMenu li {
+  font-size: 0.9rem;
+  margin: 0.2rem 0 0 0;
+}
+
+.navRIcon {
+  margin: 0 0 -0.15rem 0;
+}
+
+.navRIconMain {
+  margin: 0 0 -0.2rem 0;
+}
+
+.subMenuIcons {
+  margin: 0 0 -0.1rem 0;
+}
