--- a/components/CComponents/CourseHero/style.css
+++ b/components/CComponents/CourseHero/style.css
@@ -1,28 +1,31 @@
 .courseHero {
-  /* background-color: var(--blue); */
+  background: url(../../../public/assets/coursebg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.courseHeroContainer {
   border-radius: 0.3rem;
-  /* margin: 0.5rem 0 0 0; */
-  /* color: var(--white); */
   padding: 2rem 0;
   margin: 0 0 4rem 0;
 }
 
-.courseHero .courseHeroLeft {
+.courseHeroContainer .courseHeroLeft {
   margin: 0 1rem 0 0;
 }
 
-.courseHero .courseHeroLeft h1 {
+.courseHeroContainer .courseHeroLeft h1 {
   font-size: 2rem;
   font-weight: 300;
 }
 
-.courseHero .courseHeroLeft h2 {
+.courseHeroContainer .courseHeroLeft h2 {
   font-size: 1.2rem;
   font-weight: 400;
   margin: 0 0 1rem 0;
 }
 
-.courseHero .courseHeroLeft p {
+.courseHeroContainer .courseHeroLeft p {
   font-weight: 300;
   text-align: justify;
 }
