--- a/components/CComponents/CourseFor/style.css
+++ b/components/CComponents/CourseFor/style.css
@@ -22,3 +22,9 @@
   font-weight: 300;
   margin: 0 0 0.2rem 0;
 }
+
+@media screen and (min-width: 200px) and (max-width: 480px) {
+  .courseFor h2 {
+    font-size: 1.5rem;
+  }
+}
