--- a/components/Navbar/style.css
+++ b/components/Navbar/style.css
@@ -46,7 +46,7 @@ header nav .navContainer .menu ul li .subMenu {
   transform: translateX(-50%);
   border-bottom-left-radius: 0.3rem;
   border-bottom-right-radius: 0.3rem;
-  height: 12rem;
+  height: 11rem;
   margin: 1rem 0 0 0;
   border-top: 1px solid white;
 }
@@ -107,4 +107,14 @@ header nav .navContainer .menu ul li .subMenu .msMenu li {
 
 .subMenuIcons {
   margin: 0 0 -0.1rem 0;
+}
+
+.navLogout {
+  cursor: pointer;
+}
+
+@media screen and (min-width: 200px) and (max-width: 480px) {
+  header nav .navContainer .menu {
+    display: none;
+  }
 }
