--- a/app/globals.css
+++ b/app/globals.css
@@ -204,6 +204,9 @@ textarea {
 .margin-2 {
   margin: 0 0 -0.2rem 0;
 }
+.margin-3 {
+  margin: 0 0 -0.3rem 0;
+}
 
 .paddingBottom1 {
   padding: 0 0 1rem 0;
