--- a/components/Home/LearnSection/style.css
+++ b/components/Home/LearnSection/style.css
@@ -21,3 +21,16 @@
   font-size: 1.5rem;
   font-weight: 300;
 }
+
+@media screen and (min-width: 200px) and (max-width: 480px) {
+  .LearnSection .LearnSContainer {
+    flex-direction: column;
+  }
+  .LearnSection .LearnSContainer .learnBox {
+    margin: 0 0 1rem 0;
+  }
+
+  .arrowDown {
+    transform: rotate(90deg);
+  }
+}
