--- a/components/Home/WhyChoose/style.css
+++ b/components/Home/WhyChoose/style.css
@@ -75,3 +75,13 @@
 .whyChooseIcons {
   margin: 0 0 -0.2rem 0;
 }
+
+@media screen and (min-width: 200px) and (max-width: 480px) {
+  .WhyChoose .WhyChooseContainer .whyChooseTab {
+    flex-direction: column;
+  }
+
+  .WhyChoose .WhyChooseContainer .whyChooseTab .whyChooseTBox {
+    width: 100%;
+  }
+}
