--- a/app/catalog/style.css
+++ b/app/catalog/style.css
@@ -8,13 +8,17 @@
 }
 
 .catalogCoursesContainer {
+  flex-wrap: wrap;
   gap: 1rem;
+  width: 100%;
+  margin: 0 0 2rem 0;
 }
 
 .catalogCoursesContainer .catalogCourseTab {
-  width: 19%;
+  width: 24%;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  height: 23rem;
 }
 
 .catalogCoursesContainer .catalogCourseTab .courseContent {
@@ -23,11 +27,11 @@
 
 .catalogCoursesContainer .catalogCourseTab img {
   width: 100%;
-  height: 12rem;
+  height: 14rem;
 }
 
 .catalogCoursesContainer .catalogCourseTab h4 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 400;
 }
 
@@ -36,4 +40,19 @@
   background-color: var(--blue);
   padding: 0.2rem 0.5rem;
   border-radius: 0.3rem;
+}
+
+@media screen and (min-width: 200px) and (max-width: 480px) {
+  .catalogCoursesContainer {
+    flex-direction: column;
+  }
+
+  .catalogCoursesContainer .catalogCourseTab {
+    width: 100%;
+    height: auto;
+  }
+
+  .catalogCoursesContainer .catalogCourseTab img {
+    height: auto;
+  }
 }
