--- a/app/contact/style.css
+++ b/app/contact/style.css
@@ -1,6 +1,5 @@
 .contactContainer {
   padding: 3rem 0 6rem 0;
-  background: url(../../public/assets/contactbg.png);
 
   background-size: cover;
   background-repeat: no-repeat;
@@ -49,18 +48,9 @@
   padding: 1.5rem 0 0 0;
 }
 
-.contactContainer .contactCRight .contactForm {
-  background-color: var(--white);
-  padding: 1rem 2rem 2rem 2rem;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  border-radius: 0.3rem;
-}
-
-.contactContainer .contactCRight .contactForm h2 {
-  font-weight: 300;
-  margin: 0 0 0.5rem 0;
-  font-size: 1.2rem;
+.contactContainer .contactCRight img {
+  width: 30rem;
+  height: auto;
 }
 
 @media screen and (min-width: 200px) and (max-width: 480px) {
