--- a/components/EnquiryForm/style.css
+++ b/components/EnquiryForm/style.css
@@ -4,6 +4,7 @@ form input {
   font-size: 1rem;
   border: none;
   outline: none;
+  border-radius: 0.3rem;
 }
 
 form select {
@@ -12,6 +13,8 @@ form select {
   font-size: 1rem;
   border: none;
   outline: none;
+  border-radius: 0.3rem;
+  color: grey;
 }
 
 .inputsDiv {
