--- a/components/Footer/style.css
+++ b/components/Footer/style.css
@@ -9,7 +9,10 @@ footer .footer {
 footer .footer .footerTabs .footerTab h4 {
   font-size: 1.2rem;
   font-weight: 500;
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.3rem 0;
+  padding: 0 0 0.2rem 0;
+  /* border-bottom: 2px solid #f8a62a; */
+  text-decoration: underline;
 }
 
 footer .footer .footerTabs .footerTab ul li {
