--- a/components/Home/WhyChoose/style.css
+++ b/components/Home/WhyChoose/style.css
@@ -1,12 +1,7 @@
-.WhyChoose {
-  margin: 0 0 10rem 0;
-  position: relative;
-}
-
 .WhyChoose .WhyChooseContainer {
-  background-color: var(--bWhite);
+  /* background-color: var(--bWhite); */
   border-radius: 0.3rem;
-  padding: 1rem;
+  margin: 0 0 2rem 0;
 }
 
 .WhyChoose .WhyChooseContainer h2 {
@@ -22,30 +17,35 @@
 
 .WhyChoose .WhyChooseContainer .whyChooseTab {
   gap: 1rem;
-  margin: 0 0 -8rem 0;
 }
 
 .WhyChoose .WhyChooseContainer .whyChooseTab .whyChooseTBox {
   width: 33%;
+}
+
+.WhyChoose
+  .WhyChooseContainer
+  .whyChooseTab
+  .whyChooseTBox
+  .whyChooseTBoxContent {
   background-color: var(--blue);
   color: var(--white);
-  padding: 1rem;
-  border-radius: 0.3rem;
-  height: 17rem;
+  padding: 2rem 1rem 2rem 1rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
 }
 
-.WhyChoose .WhyChooseContainer .whyChooseTab .whyChooseTBox .whyIcons {
-  font-size: 2.2rem;
-  margin: 0 0 1rem 0;
-}
-
 .WhyChoose .WhyChooseContainer .whyChooseTab .whyChooseTBox h4 {
   font-weight: 300;
   font-size: 1.3rem;
+}
+
+.WhyChoose .WhyChooseContainer .whyChooseTab .whyChooseTBox img {
+  width: 100%;
+  height: auto;
+  margin: 0 0 -1rem 0;
 }
 
 .WhyChoose
